# Robot

./: LICENSE  readme.md
src/_docs/1、原理分析/: 原理分析.md
src/_docs/2、程序运行分析/: 程序运行分析.md
src/demo_python_topic/: package.xml  readme.md  setup.py
src/demo_python_topic/demo_python_topic/: handle_ctrl_node.py  keyboard_ctrl_topic.py  novel_pub_node.py  novel_sub_node.py  read_joint_states.py
src/demo_python_topic/launch/: launch_demo_nodes.py
src/panda_moveit_config/: CMakeLists.txt  package.xml
src/panda_moveit_config/config/: chomp_planning.yaml  controller_setting.yaml  joint_limits.yaml  lerp_planning.yaml  ompl_planning.yaml  panda.gazebo_ros2_control.xacro  panda.srdf  panda.urdf.xacro  panda_arm_hand.srdf.xacro  panda_hand.gazebo_ros2_control.xacro
src/panda_moveit_config/launch/: arm_control.launch.py  gazebo_obb.launch.py  moveit_rviz.launch.py
src/panda_moveit_config/scripts/: arm_control_from_UI.py
src/panda_moveit_config/worlds/: arm_on_the_table.sdf
src/panda_moveit_config/worlds/bolt/: model.config  model.sdf
src/panda_moveit_config/worlds/bolt/meshes/: bolt.dae  bolt.stl
src/panda_moveit_config/worlds/table/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf
src/panda_moveit_config_v2/: CMakeLists.txt  package.xml
src/panda_moveit_config_v2/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
src/panda_moveit_config_v2/launch/: demo.launch.py  (+7 more)
src/robot_description/: CMakeLists.txt  package.xml
src/ui_controller/: main.py
src/yolov8_obb/: CMakeLists.txt  package.xml
(+36 files in other folders)
